# lab-software-2026-03-10-docker-primer-contacto-FishyBusinessYT

./: README.md  docker-compose.yml
backend/: Dockerfile  config.py  pyproject.toml
frontend/: Dockerfile  package-lock.json
