[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "attrs==25.4.0",
    "blinker==1.9.0",
    "click==8.2.1",
    "flask==3.1.2",
    "flask-cors==6.0.1",
    "flask-sqlalchemy==3.1.1",
    "greenlet==3.2.4",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "markupsafe==3.0.2",
    "referencing==0.36.2",
    "rpds-py==0.27.1",
    "sqlalchemy==2.0.43",
    "typing-extensions==4.15.0",
    "werkzeug==3.1.3",
]
